@@ -3,15 +3,54 @@
 [![Codacy Badge](https://app.codacy.com/project/badge/Grade/e43cf0251bdf4f49aae15f7e82808a01)](https://www.codacy.com/gh/koolskateguy89/Anime-Filler-Manager/dashboard?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=koolskateguy89/Anime-Filler-Manager&amp;utm_campaign=Badge_Grade)
 [![Maintainability](https://api.codeclimate.com/v1/badges/774d8a80335d28beb533/maintainability)](https://codeclimate.com/github/koolskateguy89/Anime-Filler-Manager/maintainability)
 
-IB CS IA -  a yo if my examiner sees this abeg give me a `7`
+This is for my IB CS IA
 
-Use it to find **anime** and the _filler_ for that anime
+Anime Filler Manager is a Java application to search for anime from \
+[MyAnimeList](https://myanimelist.net/) \
+and find out which episodes of that anime are **filler** (unnecessary to watch), according to the amazing community-led \
+[Anime Filler List](https://www.animefillerlist.com/).
 
-## Requirements (check dependencies)
+<sub><sup><sub><sup>
+omg I should have called this MyFillerList
+</sup></sub></sup></sub>
 
-- Java 15 with preview features enabled
-- Google Guava
-- JavaFX
-- ControlsFX
-- jsoup
-- SQLite JDBC Driver
+## Getting Started
+
+### Prerequisites
+
+-  [Java 15](https://www.oracle.com/uk/java/technologies/javase-downloads.html) (with preview features)
+-  [JavaFX 15]()
+-  [ControlsFX]()
+-  [Guava]()
+-  [jsoup]()
+-  [SQLite JDBC Driver]()
+
+### Installing
+
+Clone this repository:
+```
+git clone https://github.com/koolskateguy89/Anime-Filler-Manager
+```
+
+(p.s. if using Eclipse, you can import this as a Java Project and run it through there)
+
+### Build and run using Maven
+
+To build:\
+1.  Run the command `mvn package` in the repository folder
+To run:\
+2.  Open the target directory e.g. `cd target`
+3.  Run the command `java -jar --enable-preview "AFM.jar"`\
+    OR double click executable JAR `[REPO_FOLDER]/target/AFM.jar`
+
+
+## Built With
+
+- JDK 15
+
+## How does it work?
+
+
+## License
+
+Coming soon
